--- a/2-builder-pattern/Dockerfile
+++ b/2-builder-pattern/Dockerfile
@@ -1,13 +1,5 @@
-FROM golang:1.16
+FROM alpine:3
 
-WORKDIR /app
-
-COPY go.??? ./
-
-RUN go mod download
-
-COPY . .
-
-RUN go build -o mini .
+COPY mini .
 
 ENTRYPOINT ["./mini"]
